@startuml
abstract "GameState" as C_0004356735495323104445
abstract C_0004356735495323104445 {
+GameState(Game & game) : void
+~GameState() : void
..
{abstract} +DoStateJob() = 0 : void
#Getbot() : Player &
#Getplayer() : HumanPlayer &
+abilitymanager_from_json(const json & save_file) : AbilityManager
+field_from_json(const json & save_file, ShipManager & SManager) : PlayGround
+load(const std::string & file_name) : bool
+save(const std::string & file_name) : bool
+shipmanager_from_json(const json & save_file) : ShipManager
__
#game : Game &
}
class "CLIGameInput" as C_0003955630828458704801
class C_0003955630828458704801 {
-CLIGameInput() : void
..
+CheckBinds() const : void
+ConvertCharToAction(const char c) const : action
+InputAction() : action
+InputString() const : const std::string
+InputX(size_t & x) : bool
+InputXY(Point & p) : bool
+InputXYR(Point & p, Ship::Orientation & r) : bool
{static} +instance() : CLIGameInput &
__
#compulsory_binds : std::unordered_map<std::string,action>
#custom_binds : const std::string
#default_keybinds : const std::string
#keybinds : std::unordered_map<char,action>
-output : CLIGameOutput
}
class "FileHandler" as C_0002918291441898942593
class C_0002918291441898942593 {
+FileHandler(const std::string & filename) : void
+~FileHandler() : void
..
+close_read() : void
+close_write() : void
+open_for_read() : void
+open_for_write() : void
+read(GameState & current_state) : void
+read(CLIGameInput & game_input) : void
+write(GameState & current_state) : void
__
-filename : const std::string &
-input_file : std::ifstream
-output_file : std::ofstream
}
class "Player" as C_0003605716991605700936
class C_0003605716991605700936 {
__
}
class "HumanPlayer" as C_0006734864703741281718
class C_0006734864703741281718 {
__
}
class "BattleState" as C_0008183552386718209794
class C_0008183552386718209794 {
__
}
class "Game" as C_0017470460303031448044
class C_0017470460303031448044 {
__
}
class "ShipPlacementState" as C_0016491408947504022071
class C_0016491408947504022071 {
+ShipPlacementState(Game & game) noexcept : void
..
+BotShipPlacement() : void
+DoStateJob() : void
__
}
class "ShipInitializationState" as C_0011364344354936028514
class C_0011364344354936028514 {
__
}
class "FieldCreatingState" as C_0012851784163152180326
class C_0012851784163152180326 {
__
}
C_0004356735495323104445 --> C_0017470460303031448044 : #game
C_0003955630828458704801 <.. C_0017470460303031448044 : +<<friend>>
C_0003955630828458704801 <.. C_0008183552386718209794 : +<<friend>>
C_0004356735495323104445 <|-- C_0016491408947504022071


'Generated with clang-uml, version 0.5.6
'LLVM version Ubuntu clang version 18.1.3 (1ubuntu1)
@enduml
